# azure-functions-openapi

./: .coveragerc  .env.template  .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  AGENTS.md  BRANCH_IMPROVEMENT_ANALYSIS.md  BRANCH_IMPROVEMENT_ISSUE_CLEAN.md  BRANCH_IMPROVEMENT_ISSUE_FINAL.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRD.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  fix_tags.sh  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  oh-my-opencode.json  pyproject.toml  sitemap.xml
.github/: RELEASE_CHECKLIST.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: config.yml  security.md
.github/workflows/: ci-test.yml  codeql.yml  deploy-docs.yml  deploy-production.yml  docs.yml  e2e-azure.yml  labels.yml  maintenance.yml  performance.yml  publish-pypi.yml  release.yml  sbom.yml  security.yml  stale.yml  test.yml  translation.yml
ARCHITECTURE/: index.html
CLI/: index.html
MILESTONES/: index.html
PERFORMANCE/: index.html
SECURITY/: index.html
TROUBLESHOOTING/: index.html
agent-playbook/: index.html
api/: index.html
architecture/: index.html
changelog/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
demo/: README.md  openapi-cli.tape  preview.py  render_hello_openapi_spec.py  render_hello_openapi_swagger_site.py  run_hello_example.py  run_hello_openapi_example.py  run_webhook_receiver_example.py
deployment/: index.html
development/: index.html
docs/: ARCHITECTURE.md  CLI.md  MILESTONES.md  PERFORMANCE.md  SECURITY.md  TROUBLESHOOTING.md  agent-playbook.md  api.md  architecture.md  changelog.md  cli.md  configuration.md  contributing.md  deployment.md  development.md  docs.md  examples-guide.md  faq.md  getting-started.md  incident-response.md  index.html  index.md  installation.md  maintenance.md  release-process.md  release_process.md  rollback.md  route-prefix.md  security.md  testing.md  troubleshooting.md  tutorials.md  usage.md
docs/examples/: authentication.md  blob_storage.md  cosmos_db.md  custom_schema.md  deployment.md  error_handling.md  hello.md  hello_openapi.md  http_trigger.md  notification_request.md  partner_import_bridge.md  performance_optimization.md  queue_storage.md  report_jobs.md  timer_trigger.md  todo_api.md  todo_crud.md  todo_crud_api.md  webhook_receiver.md  with_bridge.md  with_validation.md
docs/issues/: 00-SUMMARY-KO.md  00-SUMMARY.md  01-cache-falsy-value-bug.md  02-missing-return-in-decorator.md  03-thread-safety-serverinfo.md  04-html-sanitization-improvement.md  05-url-sanitization-bypass.md  06-route-validation-spaces.md  07-error-handling-schema-generation.md  08-cli-code-duplication.md  09-cli-type-validation.md  10-cache-key-performance.md  11-cache-statistics.md  12-deque-response-times.md  13-median-calculation.md  14-response-time-placeholder.md  COMPLETION_SUMMARY.md  GITHUB_ISSUE_CREATION_GUIDE.md  README.md
examples/: README.md
examples-guide/: index.html
examples/authentication/: index.html
examples/blob_storage/: index.html
examples/cosmos_db/: index.html
examples/custom_schema/: index.html
examples/deployment/: index.html
examples/e2e_app/: function_app.py  requirements.txt
examples/error_handling/: index.html
examples/hello/: index.html  requirements.txt
examples/hello_openapi/: function_app.py  index.html  requirements.txt
examples/http_trigger/: index.html
examples/notification_request/: function_app.py  index.html
examples/openapi_json/: function_app.py
examples/partner_import_bridge/: function_app.py  index.html
examples/performance_optimization/: index.html
examples/queue_storage/: index.html
examples/report_jobs/: function_app.py  index.html
examples/timer_trigger/: index.html
examples/todo_api/: function_app.py  index.html
examples/todo_crud/: function_app.py  index.html  requirements.txt
examples/todo_crud_api/: function_app.py  index.html
examples/webhook_receiver/: function_app.py  index.html
examples/with_bridge/: function_app.py  requirements.txt
examples/with_validation/: function_app.py  index.html  requirements.txt
faq/: index.html
getting-started/: index.html
incident-response/: index.html
installation/: index.html
maintenance/: index.html
release-process/: index.html
release_process/: index.html
scripts/: changelog.sh  lint.sh  version_bump.sh
search/: search_index.json
security/: index.html
src/azure_functions_openapi/: __init__.py  bridge.py  cache.py  cli.py  decorator.py  errors.py  exceptions.py  monitoring.py  openapi.py  routes.py  server_info.py  spec.py  swagger_ui.py  types.py  utils.py
testing/: index.html
tests/: test_bridge.py  test_cache.py  test_cli.py  test_decorator.py  test_decorator_enhanced.py  test_errors.py  test_function_app.py  test_hello_openapi_function_app.py  test_integration.py  test_monitoring.py  test_openapi.py  test_openapi_3_1.py  test_openapi_enhanced.py  test_openapi_spec.py  test_partner_import_bridge_example.py  test_public_api.py  test_register_metadata.py  test_server_info.py  test_snapshots.py  test_swagger_ui.py  test_swagger_ui_enhanced.py  test_todo_crud_example.py  test_utils.py  test_utils_enhanced.py  test_with_validation_example.py
tests/e2e/: test_openapi_e2e.py
tests/performance/: test_performance_regression.py
tests/snapshots/: notification_request_openapi.json  notification_request_openapi_31.json  partner_import_bridge_openapi.json  partner_import_bridge_openapi_31.json  report_jobs_openapi.json  report_jobs_openapi_31.json  todo_crud_openapi.json  todo_crud_openapi_31.json  webhook_receiver_openapi.json  webhook_receiver_openapi_31.json  with_validation_openapi.json  with_validation_openapi_31.json
troubleshooting/: index.html
tutorials/: index.html
usage/: index.html
